# salon-app-backend

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  mk-db.sh
migrations/: 0001_initial.sql  0002_task_category_migration.sql  0003_fixing_nulls_and_auto.sql  0004_removing_constraint.sql
src/: main.rs
src/middleware/: auth.rs
src/models/: appointment.rs  appointment_availability.rs  appointment_state.rs  employee.rs  mod.rs  task.rs  task_category.rs  user.rs
src/routes/: appointments.rs  availability.rs  employees.rs  mod.rs  task_category.rs  tasks.rs  users.rs
